# elmo-geo

./: .env-template  .flake8  .gitignore  Amy Evast.py  Hedgerows Readme.py  Hedges and Parcels on Protected Landscapes.py  Makefile  README.md  SharePoint.py  boundary.py  listing data.py  manifests.json  mkdocs.yaml  os data.py  pyproject.toml  pytest.ini  requirements.txt  segment.py  setup.py  test.ipynb  test.py  test2.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy_docs.yaml  verify.yaml
data/: catalogue.json
docs/: SUMMARY.md  gen_api_pages.py  index.md
docs/assets/: extra_admonitions.css  mkdocstrings.css
elm_se/: manifests.json  r.py  readme.md  requirements.txt
elm_se/docs/: Hedgerow.py  Heritage Wall.py  Woodland.py
elm_se/elm_se/: __init__.py  debug register.py  io.py  log.py  register.py  st.py
elmo_geo/: __init__.py  bare_soil.py  batch_processing.py  best_pixel.py  datasets.py  etl.py  geo_helpers.py  ingest.py  intersection.py  io.py  joins.py  log.py  plot_bare_soil_dist.py  plotting.py  preprocessing.py  raster.py  sentinel.py  sentinel_api.py  types.py  variables.py
elmo_geo/datasets/: Protected_Areas.py  __init__.py  _catalogue.py  boundary.py  catalog.py  catalogue.py  catchment_based_approach.py  cec_soilscapes.py  commons.py  datasets.py  defra_alc.py  defra_flood_risk_areas.py  defra_national_character_areas.py  defra_priority_habitats.py  ea_alert.py  ea_flood_risk_mapping.py  ea_nitrate_vulnerable_zones.py  esc_m3_trees_suitability.py  fc_agroforestry.py  fc_ewco.py  fc_woodland_sensitivity.py  fcp_habitat_classification.py  fcp_parcels_geojson.py  fcp_sylvan.py  fcp_sylvan_features.py  fcp_tree_detection.py  fr_esc_m3_trees.py  fr_esc_m3_trees_suitability.py  fr_esc_m3_woodland_suitability.py  hedges.py  historic.py  historic_datasets.py  living_england.py  moor.py  ons.py  ons_itl.py  os.py  osm.py  peat.py  protected_areas.py  (+7 more)
elmo_geo/etl/: __init__.py  datasets.py  etl.py  etl2.py  io.py  sjoin.py  transformations.py  transforms.py  transforms2.py
elmo_geo/io/: 7z.sh  __init__.py  _init__.py  convert.py  dash.py  datasets.py  download.py  esri.py  file.py  geometry.py  io.py  io2.py  ogr2gpq.py  ogr2gpq.sh  osm.py  preprocessing.py  s3.py  sentinel.py  sentinel_api.py  spol.py  sync.sh
elmo_geo/plot/: __init__.py  base_map.py  plot_bare_soil_dist.py  plotting.py
elmo_geo/r/: bare_soil.py  best_pixel.py  sentinel.py
elmo_geo/rs/: __init__.py  bare_soil.py  best_pixel.py  raster.py  sentinel.py
elmo_geo/st/: __init__.py  geo_helpers.py  geometry.py  index.py  intersection.py  join.py  joins.py  misc.py  segmentise.py  st.py  udf.py
elmo_geo/utils/: __init__.py  batch_processing.py  dbr.py  geo_helpers.py  log.py  misc.py  register.py  settings.py  ssl.py  test.py  types.py  widgets.py
notebooks/: 0_run_tests.py  AHL3 Analysis.py  Amy Evast.py  Boundary.py  Centerline.py  Challenge.py  Coastal.py  DASH.py  Hedgerows Readme.py  OSM.py  Protected Habitats.py  UKCEH.py  Untitled Notebook 2024-01-09 12:15:03.py  Untitled Notebook 2024-01-19 12_29_09.py  badly_formatted_file.py  badly_formatted_notebook.py  bare_soil_survey_analysis.py  bare_soil_survey_data_cleaning.py  calc_bare_soil_perc.py  main.py  merge_geoms_and_tile.py  process_dataset.py  process_ndvi.py  process_ndvi_and_ndsi.py  process_parcel_tile.py  process_tile_intersection.py  process_tiles.py  sentinel_download.py  spol_api.ipynb  test elmo-geo.py
notebooks/analysis/: Compare Habitat Proximity to EVAST Habitat Suitability.py  Compare Priority Habitats to Habitat Map.py  ONS_TestNotebook.py  POC Parcel Webmap.py  Test Sjoin.py  aw-alc-2025_01_10.py  aw-hedges_on_pl-2023_12_15.py  aw-priority_habitats_on_protected_areas-2025_01_13.ipynb  aw-priority_habitats_on_protected_areas-2025_01_13.py  aw-reactive_lr-2024_11_14.py  compare_overlaps.py  export_water_for_evast.py  osm_tags.py  ots-phi-totals-2025-01-15.ipynb  ots-phi-totals-2025_01_15.py  poc_parcel_webmap.py  protected_areas_test.py
notebooks/andrew/: Boundary.py  Buffer Woodland.py  EVAST Uptake.py  GeoParquet Conversion.py  Hedgerows Land Scheme.py  OS Convert2 Water.py  (+5 more)
tests/: Run Tests.py  test-imports.py  test_catalogue.py  test_etl.py  test_imports.py  test_ingest.py  test_io.py  test_joins.py  test_manifest.py  test_placeholder.py  test_rs.py  test_s3.py  test_st.py  test_utils.py
tmp/: 00_main.py  01_datalists.py  01_ingest-boundary.py  01_mosaic.py  01c_mosaic.py  02_ingest.py  02_split.py  03_sjoin.py  Admin Cost Scenarios.py  Amy EVAST.py  Convert OS Data.py  Hedges and Parcels on Protected Landscapes.py  Moorwood.py  SharePoint.py  Summarise Geospatial Data.py  centerline.py  data_paths.py  ingest.md  ingestion-data.py  rasterise_wfm.py  segment_boundary.py  test.py  todo.md  ukceh-ferts_pests.py
(+232 files in other folders)
