[project]
name = "elmo_geo"
version = "0.1"
description = "Environmental Land Management Geospatial Analysis"
readme = "README.md"
dependencies = [
    "apache-sedona==1.4.1",
    "beautifulsoup4",
    "contextily",
    "databricks-cli",
    "databricks-sdk",
    "python-dotenv",
    "esridump",
    "geopandas",
    "mapclassify",
    "numpy",
    "osdatahub",
    "osmnx",
    "pandas<=1.5.3",
    "pyarrow",
    "pydantic",
    "pyogrio",
    "pyspark==3.3.2",
    "rich",
    "rasterio",
    "rioxarray",
    "seaborn",
    "sentinelsat",
    "shapely",
    "xarray",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff<=0.1.15",
    "pip-tools",
    "pytest",
    "dbx",
    "ipykernel",
    "ipython",
    "ipywidgets",
]

[project.urls]
homepage = "https://github.com/Defra-Data-Science-Centre-of-Excellence/elmo-geo"


[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "tests/*.py"
markers = ["dbr: Requires databricks runtime"]


[tool.ruff]
line-length = 160
unsafe-fixes = false
builtins = ["spark", "dbutils", "sc", "display", "displayHTML"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["D203", "D212", "COM812", "ISC001"]  # Conflict

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"notebooks/*" = ["E402", "E501"]
"notebooks/awest/*" = ["F821", "F811", "F841"]  # 17 errors
"notebooks/boundary/*" = ["F821", "F811", "F841"]  # 25 errors
