[project]
name = "elmo_geo"
version = "0.1"
description = "Environmental Land Management Geospatial Analysis"
readme = "README.md"
dependencies = [
    "apache-sedona==1.4.1",
    "beautifulsoup4",
    "contextily",
    "databricks-cli",
    "databricks-sdk",
    "python-dotenv",
    "esridump",
    "geopandas",
    "mapclassify",
    "numpy",
    "osdatahub",
    "osmnx",
    "pandas<=1.5.3",
    "pyarrow",
    "pydantic",
    "pyogrio",
    "pyspark==3.3.2",
    "rich",
    "rasterio",
    "rioxarray",
    "seaborn",
    "sentinelsat",
    "shapely",
    "xarray",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff<=0.1.15",
    "pip-tools",
    "pytest",
    "dbx",
    "ipykernel",
    "ipython",
    "ipywidgets",
]

[project.urls]
homepage = "https://github.com/Defra-Data-Science-Centre-of-Excellence/elmo-geo"


[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "tests/*.py"
markers = ["dbr: Requires databricks runtime"]


[tool.ruff]
line-length = 160
unsafe-fixes = false
builtins = ["spark", "dbutils", "sc", "display", "displayHTML"]

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["D203", "D212", "COM812", "ISC001"]  # Conflict

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
# Issue: #78
"notebooks/analysis/*" = ["E402", "E501"]
"notebooks/awest/*" = ["E402", "E712", "E722", "E731", "E741", "F811", "F821", "F841"]
"notebooks/boundary/*" = ["E402", "E501", "E712", "E731", "E741", "F811", "F821", "F823", "F841"]
"notebooks/habitats/*" = ["E402", "E501"]
"notebooks/historic/*" = ["E402", "E501", "E731", "E741"]
"notebooks/ingestion/*" = ["E402", "E501"]
"notebooks/plots/*" = ["E402", "E501", "F403", "F405", "F811"]
